...
			token: access_token,
			fromDate: state.startDate,
			toDate: state.endDate,
			merchantReference: searchText,
		})
			.catch(e => {
				helper.showMessage("record not found");
				console.log('error in getInvoices()', e)
			})
			.then(resp => {
				const {
					data
				} = resp.data
...
				onChangeSearchText
			}}>
				<SafeAreaView style={styles.container}>
					{/* contains search bar */}
					<Header/>
					<FlatList
						testID={"invoiceListScreen_list"}
						data={data}
						renderItem={({ item }) => <InvoiceItem data={item} />}
						keyExtractor={item => item.invoiceId}
					/>

					{/* contains buttons */}
...
